Manipulating area light size with widget is not working #92184

Closed
opened 2021-10-13 15:50:22 +02:00 by Denis Belov · 11 comments

System Information
Operating system: Windows-10-10.0.19041-SP0 64 Bits
Graphics card: NVIDIA GeForce GTX 1070/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 466.63

Blender Version
Broken: version: 3.0.0 Alpha, branch: master, commit date: 2021-10-12 22:43, hash: 53af51ad50
Worked: blender-3.0.0-alpha+master.439c9b0b8478-windows.amd64-release

Caused by 482806c816

Short description of error
Manipulating area light size with vidget is not working

Exact steps for others to reproduce the error
Create area light and try to change it size with vidget.
arealight.mp4
area.blend

**System Information** Operating system: Windows-10-10.0.19041-SP0 64 Bits Graphics card: NVIDIA GeForce GTX 1070/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 466.63 **Blender Version** Broken: version: 3.0.0 Alpha, branch: master, commit date: 2021-10-12 22:43, hash: `53af51ad50` Worked: blender-3.0.0-alpha+master.439c9b0b8478-windows.amd64-release Caused by 482806c816 **Short description of error** Manipulating area light size with vidget is not working **Exact steps for others to reproduce the error** Create area light and try to change it size with vidget. [arealight.mp4](https://archive.blender.org/developer/F11054295/arealight.mp4) [area.blend](https://archive.blender.org/developer/F11054299/area.blend)
Author

Added subscriber: @DenisBelov

Added subscriber: @DenisBelov

Added subscriber: @iss

Added subscriber: @iss

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

Broken by 482806c816

Broken by 482806c8167
Member

Added subscriber: @PratikPB2123

Added subscriber: @PratikPB2123
Philipp Oeser changed title from Manipulating area light size with vidget is not working to Manipulating area light size with widget is not working 2021-10-15 09:43:15 +02:00
Member

Added subscribers: @ZedDB, @lichtwerk

Added subscribers: @ZedDB, @lichtwerk
Member

@ZedDB : mind checking?

@ZedDB : mind checking?
Member
@lichtwerk : [D12859: Fix #92184: Cage gizmo doesn't with area light](https://archive.blender.org/developer/D12859)
Member

thx checking @PratikPB2123

thx checking @PratikPB2123

This issue was referenced by 9a3c7da934

This issue was referenced by 9a3c7da934906f54caff8896bd1a27287d785ed5

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Richard Antalik self-assigned this 2021-10-15 23:21:07 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#92184
No description provided.