Fix T92184: Cage gizmo doesn't with area light

This is caused by removing `gizmo_cage2d_modal()` code in 482806c8167.

Some areas use cage gizmo to modify RNA properties without using
transform operator like area light, image empty, and compositor preview.
This functionality is implemented in code that was removed.

Add this code back.

Reviewed By: zeddb, campbellbarton

Differential Revision: https://developer.blender.org/D12859